<resources>
    <string name="app_name">"Package Inspector"</string>
    <string name="permission_grant_failed">This feature need this Permissions to work properly</string>
    <!--For NavigationView-->
    <string name="action_device_info">Device Info</string>
    <string name="action_package_manager">Package Manager</string>
    <string name="action_setting">Settings</string>
    <string name="action_detail">About</string>
    <string name="action_rate">Rating</string>
    <string name="action_more_apps">More Apps</string>
    <string name="group_communicate">Communicate</string>
    <string name="action_header_title">Package Inspector ver 1.0</string>


    <!--Device Info-->
    <string name="title_pkg_info">Package Info:</string>
    <string name="title_product_info">Product Info:</string>
    <string name="title_display_info">Display Info:</string>
    <string name="title_build_info">Build Info:</string>
    <string name="title_android_info">Android Info:</string>
    <string name="title_memory_info">Memory Info:</string>

    <string name="info_total_apk">Total Apk </string>
    <string name="info_system_apk">System Apk </string>
    <string name="info_other_apk">Other Apk </string>

    <string name="info_manufacturer">Manufacturer </string>
    <string name="info_product_name">Product Name </string>
    <string name="info_model_name">Model Name </string>
    <string name="info_platform">Platform </string>

    <string name="info_screen_size">Resolution </string>
    <string name="info_density">Density </string>
    <string name="info_quality">Quality </string>
    <string name="info_res">Resources </string>

    <string name="info_build_type">Build Type </string>
    <string name="info_build_date">Build Date </string>
    <string name="info_build_version">Build Version </string>

    <string name="info_android_ver">Android Version </string>
    <string name="info_android_sdk">Android SDK </string>

    <string name="info_ram">Total Ram </string>
    <string name="info_storage">Storage </string>

    <string name="info_result_content">: %s</string>

    <!--Package Manager-->
    <string name="pkg_system_apps">System Apps</string>
    <string name="pkg_other_apps">Others Apps</string>
    <string name="pkg_loading_apps">Loading Apps</string>
    <string name="pkg_option_extract_apk">Extract Apk</string>
    <string name="pkg_option_launch">Launch App</string>
    <string name="pkg_option_open_intent">More Detail</string>
    <string name="pkg_option_remove">Uninstall App</string>
    <string name="pkg_action_search">Search</string>
    <string name="pkg_extract_failed">Extracting failed!</string>
    <string name="pkg_extract_success">Extracting succeeded!</string>
    <string name="pkg_extract_success1">App is extracted to %s</string>
    <string name="pkg_uninstall_failed">Uninstalling failed!</string>

    <!--&lt;!&ndash;App Detail&ndash;&gt;-->
    <!--<string name="app_detail_title">App Detail</string>-->
    <!--<string name="app_uninstall">Uninstall</string>-->
    <!--<string name="app_force_stop">Force Stop</string>-->
    <!--<string name="app_launch">Launch</string>-->


    <!--App Detail Key-->
    <string name="app_info_title">App Detail</string>
    <string name="app_detail_title" translatable="false">app_title</string>
    <string name="app_detail_package" translatable="false">app_package</string>
    <string name="app_detail_apk_size" translatable="false">app_apk_size</string>
    <string name="app_detail_data_size" translatable="false">app_data_size</string>
    <string name="app_detail_permissions" translatable="false">app_permission</string>
    <string name="app_detail_date_installed" translatable="false">app_installed_date</string>
    <string name="app_detail_date_modify" translatable="false">app_modify_date</string>

    <!--App Detail Title-->
    <string name="app_package">Package name</string>
    <string name="app_apk_size">Apk size</string>
    <string name="app_data_size">Data size</string>
    <string name="app_permission">Permissions</string>
    <string name="app_install_date">Installed date</string>
    <string name="app_modify_date">Last modified date</string>
    <string name="app_data_calculating">Calculating...</string>
    <string name="app_no_permission_required">No permission required</string>
    <string name="app_version_name">Version: %s</string>

    <!--Setting-->
    <string name="setting_title">Settings</string>
    <string name="setting_apk_path_key" translatable="false">apk_path</string>
    <string name="setting_apk_path">Path to save Apk</string>
    <string name="save_path_success">Change Apk path successfully!</string>
    <string name="save_path_fail">Change Apk path failed</string>
    <string name="setting_about_key" translatable="false">about</string>
    <string name="setting_about_summary">Version 1.0</string>
    <string name="setting_about_title">About</string>

    <!--Folder Chooser-->
    <string name="folder_select_title">Select Folder</string>
    <string name="folder_select_none">Choose a folder</string>
    <string name="folder_selected">Select this folder</string>
    <string name="folder_not_select_warning">You must choose a folder first!</string>

    <!--About-->
    <string name="about_title" translatable="false">Package Inspector ver 1.0</string>
    <string name="about_author_title">Author: </string>
    <string name="about_author">Pham Van Manh</string>
    <string name="about_email_title" translatable="false">Email: </string>
    <string name="about_email" translatable="false">manhterry93@gmail.com</string>
    <string name="about_rate">If you like this app, rate it!</string>

    <!--Ads-->
    <string name="ad_banner_app_id" translatable="false">ca-app-pub-6288726369328806~2713388175</string>
    <string name="ad_banner_unit_id" translatable="false">ca-app-pub-6288726369328806/3603713729</string>
    <string name="ad_banner_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
</resources>

