<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.Preference
        android:icon="@mipmap/ic_launcher"
        android:key="@string/app_detail_title"
        android:title=""/>
    <android.support.v7.preference.Preference
        android:key="@string/app_detail_package"
        android:title="@string/app_package"/>
    <android.support.v7.preference.Preference
        android:key="@string/app_detail_apk_size"
        android:title="@string/app_apk_size"/>
    <android.support.v7.preference.Preference
        android:key="@string/app_detail_data_size"
        android:summary="@string/app_data_calculating"
        android:title="@string/app_data_size"/>
    <pl.itto.packageinspector.widget.CustomPreference
        android:key="@string/app_detail_permissions"
        android:summary="@string/app_no_permission_required"
        android:title="@string/app_permission"/>
    <android.support.v7.preference.Preference
        android:key="@string/app_detail_date_installed"
        android:title="@string/app_install_date"/>
    <android.support.v7.preference.Preference
        android:key="@string/app_detail_date_modify"
        android:title="@string/app_modify_date"/>
</android.support.v7.preference.PreferenceScreen>